[tool.poetry]
name = "sdf"
version = "0.1.0"
description = "Understand SDF thoroughly"
authors = ["Roland Siegbert <roland@siegbert.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
safety = "^1.10.3"
mypy = "^0.812"
pytest = "^6.2.2"
coverage = "^5.5"
Sphinx = "^3.5.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sdf = "sdf.kalman_1d:main"
